EFSDEV-84: implement backend authentication
